--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 
         <!-- Le styles -->
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.min.css')}}">
+          <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.min.css')}}?v=1.0.0">
         <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400%7CPermanent+Marker">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='fonts/font-awesome-4.4.0/css/font-awesome.min.css')}}">
@@ -45,10 +46,10 @@
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery-2.1.3.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery.cookie.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery.xdomainrequest.min.js')}}"></script>
-        <script type="text/javascript" src="{{url_for('static', filename='js/vendor/browser-detection.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery-ui-1.11.4.custom/jquery-ui.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/history/scripts/bundled/html4+html5/jquery.history.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/modernizr.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.min.js')}}"></script>
 
         {% include '_ga.html' ignore missing %}
