--- a/templates/privacy/locked.html
+++ b/templates/privacy/locked.html
@@ -1,5 +1,5 @@
 {% macro render_lock_page() %}
   <p id="enforce_privacy" style="font-size:36px; line-height:200px; text-align:center;">
-    <i class="glyphicon glyphicon-lock"></i> Page locked! Privacy mode enabled
+    <i class="fa fa-lock"></i> Page locked! Privacy mode enabled
   </p>
 {% endmacro %}
