--- a/templates/projects/presenters/map.html
+++ b/templates/projects/presenters/map.html
@@ -1,6 +1,6 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='map')}}">
 <div class="well">
-  <h3><i class="glyphicon glyphicon-globe"></i>Georeferencing</h3> 
+  <h3><i class="fa fa-globe"></i>Georeferencing</h3>
   <h3>Re-use the georeferencing template</h3>
 </div>
 </a>
