--- a/templates/projects/task/wrong.html
+++ b/templates/projects/task/wrong.html
@@ -6,7 +6,7 @@
 
 <div class="alert alert-danger">
     <strong>Error!</strong> This task does not belong to {{project.short_name}}.
-        <a class="btn-sm btn-danger" href={{url_for('project.presenter', short_name=project.short_name)}}> <i class="icon glyphicon glyphicon-random"></i> Try with another one</a>
+        <a class="btn-sm btn-danger" href={{url_for('project.presenter', short_name=project.short_name)}}> <i class="fa fa-random"></i> Try with another one</a>
 </div>
 
 {% endblock %}
