--- a/templates/projects/tutorial.html
+++ b/templates/projects/tutorial.html
@@ -9,8 +9,8 @@
 <div class="row">
     <div class="col-sm-12" style="text-align:center;padding-top:20px;">
         <a id="start" href={{url_for('project.presenter', short_name = project.short_name)}}
-           class="btn btn-danger btn-lg"> 
-           <i class="glyphicon glyphicon-thumbs-up"></i> 
+           class="btn btn-danger btn-lg">
+           <i class="fa fa-thumbs-o-up"></i>
            Contribute</a>
     </div>
 </div>
