--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -22,7 +22,7 @@
                     <input type="submit" value="Create Account" class="btn btn-success" />
                 </div>
                 <a href="{{url_for('account.signin')}}" class="btn btn-inverse" onclick="javascript:history.go(-1)">
-                <i class="glyphicon glyphicon-arrow-left"></i>
+                <i class="fa fa-arrow-left"></i>
                 Go Back</a>
             </fieldset>
         </form>
