--- a/templates/help/api.html
+++ b/templates/help/api.html
@@ -30,7 +30,7 @@
                     <li><a href="{{url_for('api.api_project')}}">{{url_for('api.api_project', _external=True)}}</a></li>
                 </ul>
                 <p>
-                <span class="label labe-warning"><i class="glyphicon glyphicon-bullhorn"></i> Note</span>
+                <span class="label label-warning"><i class="fa fa-bullhorn"></i> Note</span>
                 GET actions are limited to only 20 items by default,
                 you can use <em>limit</em> and <em>offset</em> to tune the number of results.
                 For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
@@ -52,7 +52,7 @@
                     <li><a href="{{url_for('api.api_task')}}">{{url_for('api.api_task', _external=True)}}</a></li>
                 </ul>
                 <p>
-                <span class="label labe-warning"><i class="glyphicon glyphicon-bullhorn"></i> Note</span>
+                <span class="label label-warning"><i class="fa fa-bullhorn"></i> Note</span>
                 GET actions are limited to only 20 items by default,
                 you can use <em>limit</em> and <em>offset</em> to tune the number of results.
                 For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
@@ -80,7 +80,7 @@
                     <li><a href="{{url_for('api.api_taskrun')}}">{{url_for('api.api_taskrun', _external=True)}}</a></li>
                 </ul>
                 <p>
-                <span class="label labe-warning"><i class="glyphicon glyphicon-bullhorn"></i> Note</span>
+                <span class="label label-warning"><i class="fa fa-bullhorn"></i> Note</span>
                 GET actions are limited to only 20 items by default,
                 you can use <em>limit</em> and <em>offset</em> to tune the number of results.
                 For further information read the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a>.
@@ -92,7 +92,7 @@
                 <p>
                 For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
                 </p>
-        
+
             </div>
         </div>
     </div>
