--- a/templates/projects/presenters/image.html
+++ b/templates/projects/presenters/image.html
@@ -1,6 +1,6 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='image')}}">
   <div class="well">
-    <h2><i class="glyphicon glyphicon-picture"></i> Image</h2> 
+    <h2><i class="fa fa-picture-o"></i> Image</h2>
     <h3>Re-use the image pattern recognition template</h3>
   </div>
 </a>
