--- a/templates/projects/presenters/sound.html
+++ b/templates/projects/presenters/sound.html
@@ -1,6 +1,6 @@
 <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='sound')}}">
 <div class="well">
-  <h2><i class="glyphicon glyphicon-music"></i> Sound</h2> 
+  <h2><i class="fa fa-music"></i> Sound</h2>
   <h3>Re-use the sound pattern recognition template template</h3>
 </div>
 </a>
