--- a/templates/projects/snippets/video.html
+++ b/templates/projects/snippets/video.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <!-- Success and Error Messages for the user --> 
+    <!-- Success and Error Messages for the user -->
     <div class="col-md-6 col-md-offset-2" style="height:50px">
         <div id="success" class="alert alert-success" style="display:none;">
             <a class="close">×</a>
@@ -28,7 +28,7 @@
 </div> <!-- End of Row -->
 
 <!--
-    Task DOM for loading the Vimeo iframe 
+    Task DOM for loading the Vimeo iframe
     It uses the class="skeleton" to identify the elements that belong to the
     task.
 -->
@@ -37,11 +37,11 @@
         <h1 id="question">Is this video showing a scientific experiment?</h1> <!-- The question will be loaded here -->
         <div id="answer"> <!-- Start DIV for the submission buttons -->
             <!-- If the user clicks this button, the saved answer will be value="yes"-->
-            <button class="btn btn-success btn-answer" value='Yes'><i class="icon glyphicon glyphicon-white icon-thumbs-up"></i> Yes</button>
+            <button class="btn btn-success btn-answer" value='Yes'><i class="fa fa-thumbs-o-up"></i> Yes</button>
             <!-- If the user clicks this button, the saved answer will be value="no"-->
-            <button class="btn btn-danger btn-answer" value='No'><i class="icon glyphicon glyphicon-white icon-thumbs-down"></i> No</button>
+            <button class="btn btn-danger btn-answer" value='No'><i class="fa fa-thumbs-o-down"></i> No</button>
             <!-- If the user clicks this button, the saved answer will be value="NotKnown"-->
-            <button class="btn btn-answer" value='NotKnown'><i class="icon glyphicon glyphicon-white icon-question-sign"></i> I don't know</button>
+            <button class="btn btn-answer" value='NotKnown'><i class="fa fa-question"></i> I don't know</button>
         </div><!-- End of DIV for the submission buttons -->
         <!-- Feedback items for the user -->
         <p>You are working now on task: <span id="task-id" class="label label-warning">#</span></p>
@@ -51,14 +51,14 @@
         <div class="progress progress-striped">
             <div id="progress" rel="tooltip" title="#" class="bar" style="width: 0%;"></div>
         </div>
-        <!-- 
+        <!--
             This project uses Disqus to allow users to provide some feedback.
             The next section includes a button that when a user clicks on it will
             load the comments, if any, for the given task
         -->
         <div id="disqus_show_btn" style="margin-top:5px;">
-            <button class="btn btn-danger btn-lg btn-disqus" onclick="loadDisqus()"><i class="glyphicon glyphicon-comments"></i> Show comments</button>
-            <button class="btn btn-lg btn-disqus" onclick="loadDisqus()" style="display:none"><i class="glyphicon glyphicon-comments"></i> Hide comments</button>
+            <button class="btn btn-danger btn-lg btn-disqus" onclick="loadDisqus()"><i class="fa fa-comments"></i> Show comments</button>
+            <button class="btn btn-lg btn-disqus" onclick="loadDisqus()" style="display:none"><i class="fa fa-comments"></i> Hide comments</button>
         </div><!-- End of Disqus Button section -->
         <!-- Disqus thread for the given task -->
         <div id="disqus_thread" style="margin-top:5px;display:none"></div>
@@ -96,7 +96,7 @@ function loadUserProgress() {
         var pct = Math.round((data.done*100)/data.total);
         $("#progress").css("width", pct.toString() +"%");
         $("#progress").attr("title", pct.toString() + "% completed!");
-        $("#progress").tooltip({'placement': 'left'}); 
+        $("#progress").tooltip({'placement': 'left'});
         $("#total").text(data.total);
         $("#done").text(data.done);
     });
