--- a/templates/projects/tasks/gdocs-map.html
+++ b/templates/projects/tasks/gdocs-map.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-globe"></i>Geo-coding</h2> 
+    <h2><i class="fa fa-globe"></i>Geo-coding</h2>
     <h3>Re-use the Urban Park tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
       type='gdocs', template='map')}}" class="btn btn-inverse">Use the
