--- a/templates/projects/tasks/gdocs-pdf.html
+++ b/templates/projects/tasks/gdocs-pdf.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-pencil"></i>Transcribing documents</h2> 
+    <h2><i class="fa fa-pencil"></i>Transcribing documents</h2>
     <h3>Re-use the PDF transcription tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
       type='gdocs', template='pdf')}}" class="btn btn-inverse">Use the
