--- a/templates/projects/tasks/gdocs-sound.html
+++ b/templates/projects/tasks/gdocs-sound.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-music"></i> Sound Pattern Recognition</h2> 
+    <h2><i class="fa fa-music"></i> Sound Pattern Recognition</h2>
     <h3>Re-use the SoundCloud tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
       type='gdocs', template='sound')}}" class="btn btn-inverse">Use the
