--- a/templates/projects/tasks/gdocs-video.html
+++ b/templates/projects/tasks/gdocs-video.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-film"></i> Video Pattern Recognition</h2> 
+    <h2><i class="fa fa-film"></i> Video Pattern Recognition</h2>
     <h3>Re-use the Vimeo tasks</h3>
   <p><a href="{{url_for('project.import_task', short_name=project.short_name,
       type='gdocs', template='video')}}" class="btn btn-inverse">Use the
