--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -23,7 +23,7 @@
             <div class="row padding-bottom-sm" id="loading-stats">
                 <div class="col-xs-12">
                     <div class="white-rounded inset-shadow-white text-center">
-                        <h3><span class="glyphicon glyphicon-refresh spinning"></span> Loading Statistics</h3>
+                        <h3><span class="fa fa-refresh spinning"></span> Loading Statistics</h3>
                     </div>
                 </div>
             </div>
