--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -8,7 +8,7 @@
         <div class="col-md-12">
             {% include "_flash_messages.html" %}
             <div class="col-sm-6 col-sm-offset-3">
-                <div class="white-rounded inset-shadow-white">
+                <div class="white-panel inset-shadow-white">
                     <h2>Great, just one more step!</h2>
                     <p>In order to confirm your identity, we've sent an email to the address you just provided. Please, click on the link given in this email to finish creating your {{ config.BRAND }} account.</p>
                     <p>If you have not received the email in the next couple of minutes, please check the junk folder. If it's not there drop us an email at <a href="mailto:issues@libcrowds.com">issues@libcrowds.com</a>.</p>
