--- a/templates/projects/snippets/convert_a_card.html
+++ b/templates/projects/snippets/convert_a_card.html
@@ -1,6 +1,6 @@
 <!-- Project completed DIV -->
 <div id="completed-row" class="row" style="display:none;">
-   <div class="col-xs-12 text-center padding-top">
+   <div class="col-xs-12 text-center padding-top-lg">
        <h1>Success! This project has now been completed.</h1>
        <h2>Thank you for all of your contributions.</h2>
        <a href="/"><i class="fa fa-home fa-3x"></i></a>
