--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -13,7 +13,7 @@
 <div class="container-padded remove-padding-bottom">
     <section class="mid-grey pattern-brushed padding-bottom-sm">
         <div class="container padding-top">
-            <div class="row margin-bottom">
+            <div class="row margin-bottom-md">
                 <div class="col-sm-6 col-xs-12 text-center">
                     <form method="post" role="form" class="upload-img-form" action="{{ url_for('account.update_profile', name=current_user.name) }}" enctype="multipart/form-data">
                         <fieldset>
@@ -66,7 +66,7 @@
                     </form>
                 </div>
 
-                <div class="col-sm-6 col-xs-12 white-rounded inset-shadow">
+                <div class="col-sm-6 col-xs-12 white-panel inset-shadow">
 
                     <form method="post" role="form" class="form-horizontal" action="{{ url_for('account.update_profile', name=current_user.name) }}">
                         <fieldset>
