--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -124,9 +124,9 @@
 
 {% macro show_project(project, active_cat, current_user, upload_method) %}
 <div class="project-item container container-padded">
-    <div class="row project-summary">
+    <div class="row">
         <div class="col-md-8 col-xs-12">
-            <div class="white-rounded inset-shadow-white project-desc">
+            <div class="white-panel inset-shadow-white project-desc">
                 <div class="col-sm-6 col-xs-12 hidden-xs project-polaroid">
                     <a class="polaroid" href="{{ url_for('blplugin.details', short_name = project.short_name) }}" data-polaroid-title="{{ project.name }}">
                         {{ render_project_thumbnail(project, upload_method, class='img-polaroid', id="project.id") }}
@@ -172,19 +172,19 @@
             </div>
 
             <div class="col-sm-3 hidden-sm hidden-xs">
-                <div class="white-rounded inset-shadow-white project-info">
+                <div class="white-panel inset-shadow-white project-info">
                     <div class="vcenter">
                         <i class="fa fa-check-square-o fa-2x"></i><div class="padding-left-xs inline-block" id="{{project.short_name}}Complete">Completed: {{ project.overall_progress | round | int }}%</div>
                     </div>
-                    <hr class="small-margins">
+                    <hr class="marc">
                     <div class="vcenter">
                         <i class="fa fa-tasks fa-2x"></i><div class="padding-left-xs inline-block tasks-remaining" data-tasks="{{project.n_tasks}}" data-progress="{{ project.overall_progress | round | int }}">Tasks Remaining:</div>
                     </div>
-                    <hr class="small-margins">
+                    <hr class="margin-top-xs margin-bottom-xs">
                     <div class="vcenter">
                         <i class="fa fa-users fa-2x"></i><div class="padding-left-xs inline-block">Volunteers: {{ project.n_volunteers}}</div>
                     </div>
-                    <hr class="small-margins">
+                    <hr class="margin-top-xs margin-bottom-xs">
                     <div class="vcenter">
                         <i class="fa fa-clock-o fa-2x"></i><div class="padding-left-xs inline-block">Last Active: {{ project.last_activity}}</div>
                     </div>
