--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,7 +8,7 @@
     <div class="container ie-vcenter">
       <h1>Crowdsourcing projects<br />from the British Library</h1>
         <div class="col-xs-12">
-            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+            <div data-anchor="#featured-projects" class="btn btn-circle anchor-btn">
               <a>
                 <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
                 <div><br>Get<br>Started</div>
@@ -34,7 +34,7 @@
       </div>
 </section>
 
-<a id="intro"></a>
+<a id="featured-projects"></a>
 {% if categories_projects['featured'] %}
 <section class="white pattern-white-wall box-shadow-white-bottom">
   <div class="container padding-top-sm">
