--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
               {% endif %}
         </div>
 
-        <footer id="sticky-footer">
+        <footer>
         {% include ['custom/_footer.html', '_footer.html'] ignore missing %}
         </footer>
 
